--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -20,3 +20,6 @@ suites:
     run_list:
       - recipe[spotify]
     attributes:
+  - name: uninstall
+    run_list:
+      - recipe[spotify_test::uninstall]
