--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,13 @@ install:
 before_script:
   # Pending ENV support in Kitchen's Rake tasks and not just the CLI
   - cp .kitchen.travis.yml .kitchen.local.yml
+  - echo -e $DIGITALOCEAN_SSH_KEY_BODY > ~/.ssh/id_rsa
 
 script:
-  - chef exec rake && chef exec rake kitchen:all
+  - chef exec rake && chef exec kitchen test -c 4
 
 after_script:
+  - chef exec kitchen destroy
 
 env:
   global:
