--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -14,8 +14,9 @@ platforms:
   - name: windows-8
     driver:
       box: roboticcheese/windows-8
+  - name: ubuntu-15.04
   - name: ubuntu-14.04
-  - name: debian-7.8
+  - name: debian-8.2
 
 suites:
   - name: default
@@ -27,3 +28,4 @@ suites:
       - recipe[spotify_test::uninstall]
     excludes:
       - windows-8
+      - windows
